<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdgeLength="0.0dip"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.devdroid.sleepassistant.activity.SleepSupportActivity"
    tools:showIn="@layout/activity_restriction"
    android:scrollbars="none" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:id="@+id/ll_que_alarm"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/que_alarm"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_que_detect"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/que_detect"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_que_hm"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/que_hm"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_que_support"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/que_support"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_que_alarmuse"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/que_alarmuse"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_que_theory"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/que_theory"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_que_report"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/que_report"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_que_autostop"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/que_autostop"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>

</LinearLayout>
</ScrollView>