<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/all_layout"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.devdroid.sleepassistant.activity.SettingsActivity"
    tools:showIn="@layout/activity_restriction">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_setting_data_export"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:text="@string/item_setting_data_export"/>
    </LinearLayout>
    <!--<TextView-->
        <!--style="@style/SettingItemDivide"/>-->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_setting_data_import"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:text="@string/item_setting_data_import"/>
    </LinearLayout>
    <!--<TextView-->
    <!--style="@style/SettingItemDivide"/>-->
    <LinearLayout
        android:id="@+id/ll_setting_account"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/item_setting_account"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <!--<LinearLayout-->
        <!--android:id="@+id/ll_setting_stayAbove"-->
        <!--style="@style/SettingItemLinearLayout">-->
        <!--<TextView-->
            <!--style="@style/SettingItem"-->
            <!--android:text="@string/item_setting_stayabove"/>-->
    <!--</LinearLayout>-->
    <LinearLayout
        android:id="@+id/ll_setting_connectType"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/item_setting_connecttype"/>
    </LinearLayout>
    <TextView
    style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_setting_feedback"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/nav_string_feedback"/>
    </LinearLayout>
    <!--<TextView-->
        <!--style="@style/SettingItemDivide"/>-->
    <!--<LinearLayout-->
        <!--android:visibility="gone"-->
        <!--android:id="@+id/ll_setting_logout"-->
        <!--style="@style/SettingItemLinearLayout">-->
        <!--<TextView-->
            <!--style="@style/SettingItem"-->
            <!--android:text="@string/item_setting_logput"/>-->
        <!--<TextView-->
        <!--style="@style/SettingItemDivide"/>-->
    <!--</LinearLayout>-->
    <TextView
    style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_setting_helpCenter"
        style="@style/SettingItemLinearLayout">
        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/item_setting_helpcenter"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <LinearLayout
        android:id="@+id/ll_setting_about"
        style="@style/SettingItemLinearLayout">

        <TextView
            style="@style/SettingItem"
            android:textColor="@color/white"
            android:text="@string/nav_string_about"/>
    </LinearLayout>
    <TextView
        style="@style/SettingItemDivide"/>
    <!--<LinearLayout-->
        <!--android:id="@+id/ll_setting_logout"-->
        <!--style="@style/SettingItemLinearLayout">-->

        <!--<TextView-->
            <!--style="@style/SettingItem"-->
            <!--android:textColor="@color/color_calendar_card_bad"-->
            <!--android:text="@string/nav_string_logout"/>-->
    <!--</LinearLayout>-->
    <RelativeLayout
        android:id="@+id/rl_setting_logout"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:layout_height="42dp">

        <Button
            android:id="@+id/bt_setting_logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:onClick="onClick"
            android:layout_marginRight="12dp"
            android:background="@color/blue"
            android:text="注 销"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </RelativeLayout>
    <!--<TextView-->
        <!--style="@style/SettingItemDivide"/>-->
</LinearLayout>